[project]
name = "pondsys"
version = "0.1.0-beta"
description = "Iteratively analyzes structural framing members for ponding conditions."
authors = [
    {name = "matthew-upshaw",email = "matthew.upshaw02@gmail.com"}
]
license = "LICENSE"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joistpy (==1.1.0)",
    "matplotlib (==3.10.1)",
    "numpy (==1.26.4)",
    "pynitefea (==1.0.1)",
    "pyvista (==0.44.2)",
    "questionary (==2.1.0)",
    "scipy (==1.15.2)",
    "steelpy (==1.1.1)"
]

[tool.poetry.package.exclude]
"venv/*"
"notebooks/*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
